# GB_CommandProgCPP_team3

./: .gitignore  Makefile  Makefile.Debug  Makefile.Release  README.MD  const_strings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.rcc  ui_mainwindow.h
Concept/: Concept Editor.docx  Concept Editor.odt
EditorTeam/: CMakeLists.txt  EditorTeam.pro  HelpBrowser.h  application.qrc  const_strings.h  filehandler.cpp  filehandler.h  helpbrowser.cpp  helpbrowser.h  helpbrowser.ui  idevhandler.h  l10n_en.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  searchform.cpp  searchform.h  searchhighlight.cpp  searchhighlight.h  settingskeeper.cpp  settingskeeper.h  shortquitEditor.h
EditorTeam/arch/: 7zzs
EditorTeam/resources/: resources.qrc
EditorTeam/resources/helpfiles/: about.htm  about.html  about_en.htm  about_ru.htm  edit.htm  edit.html  edit_en.htm  edit_ru.htm  files.htm  files.html  files_en.htm  files_ru.htm  format.htm  format_en.htm  format_ru.htm  index.htm  index.html  index_en.htm  index_ru.htm  setting.htm  setting.html  settings_en.htm  settings_ru.htm  style.css
EditorTeam/resources/themes/: grey.qss  white.qss
EditorTeam/resources/translation/: l10n_en.qm  l10n_en.ts  l10n_ru.qm  l10n_ru.ts
debug/: moc_mainwindow.cpp  qrc_resources.cpp
Команда редактирования/: mainwindow.cpp
